2007-09-27  Ankit Jain  <jankit@novell.com>

	* MSBuildProjectExtension.cs: New.
	* DefaultMSBuildProjectExtension.cs: New.

	Move language specific stuff from MSBuildFileFormat into the respective extensions.
	* CSharpMSBuildProjectExtension.cs: New.
	* VBNetMSBuildProjectExtension.cs: New.
	* SilverlightMSBuildProjectExtension.cs: New.

	* Utils.cs: New. Move utility methods from MSBuildFileFormat to here.
	* MSBuildData.cs (ExtensionChain): New.
	(FlavorPropertiesParent): New.
	(TypeGuids): New.

	* SlnFileFormat.cs: Track api changes.

	* Makefile.am: Update.
	* prj2make-sharp-lib.addin.xml: Update. Add new ExtensionPoint for
	MSBuildProjectExtension.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* prj2make-sharp-lib.addin.xml: Bump MD version.

2007-09-17  Ankit Jain  <jankit@novell.com>

	* MSBuildProjectServiceExtension.cs (GetDefaultResourceId): Split into
	this and ...
	(GetDefaultResourceIdInternal): this. static method.
	* MsPrjHelper.cs (SlnMaker.GetContents): Set resource id using vs.net
	rules.

2007-09-17  Ankit Jain  <jankit@novell.com>

	* MSBuildFileFormat.cs (WriteFileInternal): Emit RootNamespace for
	global config element.

2007-09-17  Ankit Jain  <jankit@novell.com>

	* MSBuildFileFormat.cs (WriteFileInternal): Emit RootNamespace for C#
	also. Derived from patch by Eric Butler <eric@extremeboredom.net>

2007-09-15  Ankit Jain  <jankit@novell.com>

	* MSBuildProject.cs: Remove.
	* MSBuildSolution.cs: Remove.

	* MSBuildFileFormat.cs (GetMSBuildData): New.
	Update to track changes.
	* SlnFileFormat.cs (.cctor): Add handler for HandleAddEntry.
	(GetSlnData): New.
	(HandleAddEntry):
	(SetHandlers):
	(HandleCombineEntryAdded):
	(ConvertToMSBuild): Move here from MSBuildSolution.
	Update to track changes.
	* SlnData.cs (ProjectsByGuid): Move here from MSBuildSolution.
	* MSBuildProjectServiceExtension.cs (GetDefaultResourceId): Override.
	Moved from MSBuildProject to here.
